Warning大消除，包括未检查的类型转换等